<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="hello">Change Display Format</string>
    <string name="app_name">ChangeDisplayFormat</string>
    <string name="displayformat720p50">720p@50(Preferred)</string>
    <string name="displayformat720p60">720p@60(Preferred)</string>
    <string name="displayformat1080i50">1080i@50</string>
    <string name="displayformat1080i60">1080i@60</string>
    <string name="displayformat1080p50">1080p@50</string>
    <string name="displayformat1080p60">1080p@60</string>
    <string name="displayformat720p603d">720p@60(full 3d)</string>
    <string name="displayformat1080p24">1080p@24</string>
    <string name="displayformat1080p483d">1080p48(full 3d)</string>
    <string name="displayformat2160p30">2160p@30(UHD)</string>
  <string name="comments">This is a very simple app to change display format. </string>
</resources>
